Removing some garbage and add Dockerfile

--- a/supplier/src/main/resources/application.properties
+++ b/supplier/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Supplier
 server.port=8811
 
-spring.rabbitmq.host=dockerhost
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 
 spring.cloud.stream.function.definition=supplier;
