JDK image name fix

--- a/supplier/Dockerfile
+++ b/supplier/Dockerfile
@@ -1,5 +1,5 @@
 #Prepare build environment
-FROM openjdk:11-jdk-alpine AS build
+FROM openjdk:11-jdk-slim AS build
 RUN apt-get update && apt-get install dos2unix
 WORKDIR /app
 
@@ -14,6 +14,6 @@ COPY . /app
 RUN dos2unix gradlew && chmod +x gradlew && ./gradlew build -x test
 
 # Create minimal image from build artifact
-FROM openjdk:11-jdk-alpine
+FROM openjdk:11-jdk-slim
 COPY --from=build /app/build/libs/*.jar /app/
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
