--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,25 @@
 version: '3'
+
 services:
 
-  kafka:
-    image: wurstmeister/kafka
-    container_name: kafka-multibinder
-    ports:
-      - "9092:9092"
-    environment:
-      - KAFKA_ADVERTISED_HOST_NAME=127.0.0.1
-      - KAFKA_ADVERTISED_PORT=9092
-      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-    depends_on:
-      - zookeeper
+  #kafka:
+    #image: wurstmeister/kafka
+    #container_name: kafka-multibinder
+    #ports:
+      #- "9092:9092"
+    #environment:
+      #- KAFKA_ADVERTISED_HOST_NAME=127.0.0.1
+      #- KAFKA_ADVERTISED_PORT=9092
+      #- KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+    #depends_on:
+      #- zookeeper
 
-  zookeeper:
-    image: wurstmeister/zookeeper
-    ports:
-      - "2181:2181"
-    environment:
-      - KAFKA_ADVERTISED_HOST_NAME=zookeeper
+  #zookeeper:
+    #image: wurstmeister/zookeeper
+    #ports:
+      #- "2181:2181"
+    #environment:
+      #- KAFKA_ADVERTISED_HOST_NAME=zookeeper
 
   rabbitmq:
     image: rabbitmq:management
@@ -27,6 +28,37 @@ services:
       - 5672:5672
       - 15672:15672
 
+  consumer:
+    build:
+      context: .
+      dockerfile: consumer/Dockerfile
+    container_name: asset_registry
+    ports:
+      - 8812:8812
+    #environment:
+    #  SPRING_DATASOURCE_URL: jdbc:postgresql://asset_registry_postgres:5432/asset_registry_db
+    #  SPRING_RABBITMQ_HOST: rabbitmq0
+    #networks:
+    #  - core
+    #  - default
+    depends_on:
+      - redis
+
+  supplier:
+    build:
+      context: .
+      dockerfile: supplier/Dockerfile
+    container_name: asset_registry
+    ports:
+      - 8811:8811
+    #environment:
+    #  SPRING_DATASOURCE_URL: jdbc:postgresql://asset_registry_postgres:5432/asset_registry_db
+    #  SPRING_RABBITMQ_HOST: rabbitmq0
+    #networks:
+    #  - core
+    #  - default
+    depends_on:
+      - rabbitmq
 
   redis:
     image: redis
