--- a/supplier/Dockerfile
+++ b/supplier/Dockerfile
@@ -16,4 +16,4 @@ RUN dos2unix gradlew && chmod +x gradlew && ./gradlew build -x test
 # Create minimal image from build artifact
 FROM openjdk:11-jdk-slim
 COPY --from=build /app/build/libs/*.jar /app/
-ENTRYPOINT ["java", "-jar", "/app/app.jar"]
+ENTRYPOINT ["java", "-jar", "/app/supplier-0.0.1-SNAPSHOT.jar"]
