--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,13 +23,12 @@ services:
 
   rabbitmq:
     image: rabbitmq:management
-    container_name: rabbit-multibinder
+    container_name: rabbitmq
     ports:
       - 5672:5672
       - 15672:15672
     networks:
       - default
-
 
   consumer:
     build:
@@ -38,14 +37,12 @@ services:
     container_name: consumer
     ports:
       - 8812:8812
-    #environment:
-    #  SPRING_DATASOURCE_URL: jdbc:postgresql://asset_registry_postgres:5432/asset_registry_db
-    #  SPRING_RABBITMQ_HOST: rabbitmq0
-    #networks:
-    #  - core
-    #  - default
+    environment:
+      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_REDIS_HOST: redis
     depends_on:
       - redis
+      - rabbitmq
     networks:
       - default
 
@@ -56,12 +53,8 @@ services:
     container_name: supplier
     ports:
       - 8811:8811
-    #environment:
-    #  SPRING_DATASOURCE_URL: jdbc:postgresql://asset_registry_postgres:5432/asset_registry_db
-    #  SPRING_RABBITMQ_HOST: rabbitmq0
-    #networks:
-    #  - core
-    #  - default
+    environment:
+      SPRING_RABBITMQ_HOST: rabbitmq
     depends_on:
       - rabbitmq
     networks:
@@ -69,9 +62,8 @@ services:
 
   redis:
     image: redis
-    container_name: cache
+    container_name: redis
     ports:
       - 6379:6379
     networks:
       - default
-
