--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3'
 
+networks:
+  core:
+    external: true
+
 services:
 
   #kafka:
@@ -28,7 +32,7 @@ services:
       - 5672:5672
       - 15672:15672
     networks:
-      - default
+      - core
 
   consumer:
     build:
@@ -44,7 +48,7 @@ services:
       - redis
       - rabbitmq
     networks:
-      - default
+      - core
 
   supplier:
     build:
@@ -58,7 +62,7 @@ services:
     depends_on:
       - rabbitmq
     networks:
-      - default
+      - core
 
   redis:
     image: redis
@@ -66,4 +70,4 @@ services:
     ports:
       - 6379:6379
     networks:
-      - default
+      - core
