--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
     depends_on:
       - redis
       - rabbitmq
+      - supplier
     networks:
       - core
 
@@ -69,5 +70,17 @@ services:
     container_name: redis
     ports:
       - 6379:6379
+    networks:
+      - core
+
+  redis-commander:
+    container_name: redis-commander
+    image: rediscommander/redis-commander:latest
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    depends_on:
+      - redis
+    ports:
+      - 8813:8081
     networks:
       - core
