--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.rabbitmq.port=5672
 spring.redis.host=localhost
 spring.redis.port=6379
 
+spring.liquibase.change-log=classpath:liquibase-changeLog.xml
+spring.liquibase.enabled=true
+
 spring.cloud.stream.function.definition=consumer;
 
 spring.cloud.stream.rabbit.bindings.consumer-in-0.consumer.queue-name-group-only=true
