--- a/consumer/build.gradle
+++ b/consumer/build.gradle
@@ -17,6 +17,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-stream-rabbit:3.0.3.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.liquibase:liquibase-core:3.8.8'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.postgresql:postgresql'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
