--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 spring.application.name=Consumer
 server.port=8812
+spring.jpa.hibernate.ddl-auto=none
 
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-
+#Redis
 spring.redis.host=localhost
 spring.redis.port=6379
 
-spring.liquibase.change-log=classpath:liquibase-changeLog.xml
-spring.liquibase.enabled=true
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driverClassName=org.postgresql.Driver
 
+#Queue
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
 spring.cloud.stream.function.definition=consumer;
 
 spring.cloud.stream.rabbit.bindings.consumer-in-0.consumer.queue-name-group-only=true
