--- a/supplier/src/main/resources/application.properties
+++ b/supplier/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=8811
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 
+test-data=classpath:test-data.properties
+
 spring.cloud.stream.function.definition=supplier;
 
 spring.cloud.stream.rabbit.bindings.supplier-in-0.consumer.queue-name-group-only=true
@@ -11,27 +13,3 @@ spring.cloud.stream.bindings.supplier-out-0.destination=personExchange
 spring.cloud.stream.bindings.supplier-in-0.group=personQueue
 spring.cloud.stream.bindings.supplier-out-0.binder=rabbit
 spring.cloud.stream.bindings.supplier-out-0.content-type=application/json
-
-test-data.person[0].firstName=Andrjushka
-test-data.person[0].lastName=Ivanov
-test-data.person[0].age=3
-
-test-data.person[1].firstName=Petenka
-test-data.person[1].lastName=Petrov
-test-data.person[1].age=1
-
-test-data.person[2].firstName=Dmitry
-test-data.person[2].lastName=Ivanovich
-test-data.person[2].age=4
-
-test-data.person[3].firstName=Zosefina
-test-data.person[3].lastName=Prekrasnaja
-test-data.person[3].age=7
-
-test-data.person[4].firstName=Neponjatnii
-test-data.person[4].lastName=Chuvak
-test-data.person[4].age=5
-
-test-data.person[5].firstName=Great
-test-data.person[5].lastName=Commandment
-test-data.person[5].age=99
