Redoing by task description

--- a/supplier/src/main/resources/test-data.properties
+++ b/supplier/src/main/resources/test-data.properties
@@ -1,3 +1,5 @@
+test-data.calculation-seed=0.5
+
 test-data.person[0].firstName=Andrjushka
 test-data.person[0].lastName=Ivanov
 test-data.person[0].age=3
