--- a/supplier/src/main/resources/application.properties
+++ b/supplier/src/main/resources/application.properties
@@ -5,11 +5,8 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 
 test-data=classpath:test-data.properties
+scheduler-period=2000
 
-spring.cloud.stream.function.definition=supplier;
-
-spring.cloud.stream.rabbit.bindings.supplier-in-0.consumer.queue-name-group-only=true
-spring.cloud.stream.bindings.supplier-out-0.destination=personExchange
-spring.cloud.stream.bindings.supplier-in-0.group=personQueue
-spring.cloud.stream.bindings.supplier-out-0.binder=rabbit
-spring.cloud.stream.bindings.supplier-out-0.content-type=application/json
+spring.cloud.stream.bindings.output.destination=personExchange
+spring.cloud.stream.bindings.output.group=personQueue
+spring.cloud.stream.bindings.output.content-type=application/json
