--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,24 +5,24 @@ networks:
 
 services:
 
-  #kafka:
-    #image: wurstmeister/kafka
-    #container_name: kafka-multibinder
-    #ports:
-      #- "9092:9092"
-    #environment:
-      #- KAFKA_ADVERTISED_HOST_NAME=127.0.0.1
-      #- KAFKA_ADVERTISED_PORT=9092
-      #- KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-    #depends_on:
-      #- zookeeper
+  kafka:
+    image: wurstmeister/kafka
+    container_name: kafka-multibinder
+    ports:
+      - "9092:9092"
+    environment:
+      - KAFKA_ADVERTISED_HOST_NAME=127.0.0.1
+      - KAFKA_ADVERTISED_PORT=9092
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+    depends_on:
+      - zookeeper
 
-  #zookeeper:
-    #image: wurstmeister/zookeeper
-    #ports:
-      #- "2181:2181"
-    #environment:
-      #- KAFKA_ADVERTISED_HOST_NAME=zookeeper
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      - KAFKA_ADVERTISED_HOST_NAME=zookeeper
 
   postgres:
     container_name: postgres
@@ -34,15 +34,6 @@ services:
       - postgres:/data/postgres
     ports:
       - 5432:5432
-    networks:
-      - default
-
-  rabbitmq:
-    image: rabbitmq:management
-    container_name: rabbitmq
-    ports:
-      - 5672:5672
-      - 15672:15672
     networks:
       - default
 
@@ -59,7 +50,7 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/postgres
     depends_on:
       - redis
-      - rabbitmq
+      - kafka
       - postgres
     networks:
       - default
@@ -74,7 +65,7 @@ services:
     environment:
       SPRING_RABBITMQ_HOST: rabbitmq
     depends_on:
-      - rabbitmq
+      - kafka
     networks:
       - default
 
