--- a/supplier/build.gradle
+++ b/supplier/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'org.springframework.cloud:spring-cloud-stream-binder-test:3.0.3.RELEASE'
+	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-support:3.0.3.RELEASE'
 
 }
 
