--- a/consumer/build.gradle
+++ b/consumer/build.gradle
@@ -19,13 +19,15 @@ dependencies {
 	implementation 'org.liquibase:liquibase-core:3.8.8'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.postgresql:postgresql'
+	compileOnly 'org.projectlombok:lombok:1.18.12'
+	annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	testImplementation 'org.springframework.cloud:spring-cloud-stream-binder-test:3.0.3.RELEASE'
+	testImplementation 'org.springframework.cloud:spring-cloud-stream-test-support:3.0.3.RELEASE'
 
-	compileOnly 'org.projectlombok:lombok:1.18.12'
-	annotationProcessor 'org.projectlombok:lombok:1.18.12'
 }
 
 task download(type: Exec) {
