Readme fix and docker-compose fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
 
   kafka:
     image: wurstmeister/kafka
-    container_name: kafka-multibinder
+    container_name: kafka
     ports:
       - 9092:9092
     environment:
@@ -45,7 +45,7 @@ services:
     ports:
       - 8812:8812
     environment:
-      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
       SPRING_REDIS_HOST: redis
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/postgres
     depends_on:
@@ -63,7 +63,7 @@ services:
     ports:
       - 8811:8811
     environment:
-      SPRING_RABBITMQ_HOST: rabbitmq
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
     depends_on:
       - kafka
     networks:
