--- a/supplier/src/main/resources/application.properties
+++ b/supplier/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=Supplier
 server.port=8811
 
+# Test data
 test-data=classpath:test-data.properties
 scheduler-period=2000
 
+# API base mapping
+application.api.base-mapping=api/supplier
+
+# Queue
 spring.cloud.stream.bindings.output.destination=personExchange
 spring.cloud.stream.bindings.output.group=personQueue
 spring.cloud.stream.bindings.output.content-type=application/json
