--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.redis.host=localhost
 spring.redis.port=6379
 
+# API base mapping
+application.api.base-mapping=api/consumer
+
 # PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
